--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,95 +1,89 @@
-pipeline {
-  agent {
+// THIS IS THE FINAL FIX.
+// The agent runs as the same user ID as the Jenkins host user, solving all permission issues.
+// Replace <UID>:<GID> with the output from 'id -u jenkins':'id -g jenkins' on your server.
+agent {
     docker {
-      image 'jerry943/maven-docker-agent-java17:v1'
-      registryUrl 'https://index.docker.io/v1/'
-      registryCredentialsId 'docker-cred'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+        image 'jerry943/maven-docker-agent-java17:v1'
+        registryUrl 'https://index.docker.io/v1/'
+        registryCredentialsId 'docker-cred'
+        // Example: '--user 1000:1000 -v /var/run/docker.sock:/var/run/docker.sock'
+        args '--user 111:113 -v /var/run/docker.sock:/var/run/docker.sock'
     }
-  }
+}
 
-  stages {
-    stage('Checkout') {
-      steps {
-        // This is the CRITICAL first step.
-        // It performs a full clone and creates the .git directory.
-        checkout scm
-
-        // This command helps you verify the .git directory exists after checkout.
-        sh 'echo "Workspace after checkout:" && ls -la'
-      }
-    }
-    stage('Build and Test') {
-      steps {
-        sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
-      }
-    }
-    stage('Static Code Analysis') {
-      environment {
-        SONAR_URL = "http://44.201.166.87:9000"
-      }
-      steps {
-        withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh '''
-            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-            mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
-          '''
+pipeline {
+    stages {
+        stage('Checkout') {
+            steps {
+                // Now that the agent has the correct permissions, checkout will succeed.
+                checkout scm
+                sh 'echo "Workspace checked out successfully:" && ls -la'
+            }
         }
-      }
-    }
-    stage('Build and Push Docker Image') {
-      environment {
-        DOCKER_IMAGE = "jerry943/ultimate-cicd:${BUILD_NUMBER}"
-      }
-      steps {
-        script {
-          sh '''
-            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-            docker build -t ${DOCKER_IMAGE} .
-          '''
-          def dockerImage = docker.image("${DOCKER_IMAGE}")
-          docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
-            dockerImage.push()
-          }
+        stage('Build and Test') {
+            steps {
+                sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
+            }
         }
-      }
-    }
-
-   
-       stage('Update Deployment File') {
-        environment {
-            GIT_REPO_NAME = "Jenkins-ArgoCD-Pipeline"
-            GIT_USER_NAME = "Harshjerry"
+        stage('Static Code Analysis') {
+            environment {
+                SONAR_URL = "http://44.201.166.87:9000/"
+            }
+            steps {
+                withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
+                  sh '''
+                    cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                    mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
+                  '''
+                }
+            }
         }
-        steps {
-            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                sh '''
-                    echo "--- Entering final stage ---"
-                    cd ${WORKSPACE}
-                    
-                    # --- THIS IS THE FIX ---
-                    # Change ownership of all files in the current directory (.) to the root user.
-                    # The -R makes it recursive for all subdirectories.
-                    echo "Taking ownership of workspace files as root user..."
-                    chown -R root:root .
-                    
-                    echo "Directory contents after chown:"
-                    ls -la
-
-                    # Now, the 'root' user (who is running this script) owns the .git directory
-                    # and has permission to write to it. These commands will now succeed.
-                    echo "Attempting git configuration..."
-                    git config user.email "harshdeep1043@gmail.com"
-                    git config user.name "jerry7"
-
-                    echo "Updating deployment file and pushing to git..."
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                '''
+        stage('Build and Push Docker Image') {
+            environment {
+                DOCKER_IMAGE = "jerry943/ultimate-cicd:${BUILD_NUMBER}"
+            }
+            steps {
+                script {
+                    sh '''
+                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                        docker build -t ${DOCKER_IMAGE} .
+                    '''
+                    def dockerImage = docker.image("${DOCKER_IMAGE}")
+                    docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                        dockerImage.push()
+                    }
+                }
+            }
+        }
+        stage('Update Deployment File') {
+            // Because the agent now runs as the correct user,
+            // we do NOT need special root privileges or chown here anymore.
+            // This entire block is simplified.
+            environment {
+                GIT_REPO_NAME = "Jenkins-ArgoCD-Pipeline"
+                GIT_USER_NAME = "Harshjerry"
+            }
+            steps {
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                    sh '''
+                        git config user.email "harshdeep1043@gmail.com"
+                        git config user.name "Harshjerry-CI"
+                        
+                        git checkout main
+                        
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                        git commit -m "CI: Update deployment image to version ${BUILD_NUMBER}"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} main
+                    '''
+                }
             }
         }
     }
-  }
+    // Always clean up to prevent issues between builds
+    post {
+        always {
+            cleanWs()
+        }
+    }
 }
